ak1pro/microk8s-config/kubernetes-dashboard/k8s-dash-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  parentRefs:
    - kind: Gateway
      name: envoy-gateway
      namespace: kube-public
      sectionName: https
  hostnames:
    - "k8s.ak1pro.n1l.ro"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes-dashboard
          port: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   namespace: kube-system
#   name: kubernetes-dashboard-http
# spec:
#   type: ClusterIP
#   selector:
#     k8s-app: kubernetes-dashboard
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 9090
